--- a/index.html
+++ b/index.html
@@ -181,55 +181,57 @@
             <div class="row-footer1 clearfix">
                 <div class="col-footer1">
                 <div class="col-footer clearfix">
-                    <p>OFFERINGS</p>
+                    <p>Services</p>
                         <ul>
-                            <li><a href="offerings.html#startup" class="fundraising">Startup Package</a></li>
-                            <li><a href="offerings.html#esop" class="esop">ESOP Management</a></li>
-                            <li><a href="offerings.html#compliance" class="contract">Compliance Management</a></li>
-                            <li><a href="offerings.html#fundraising" class="other">Fundraising Package</a></li>
-                            <li><a href="offerings.html#incubator" class="other">Incubator/Accelerator Package</a></li>
+                            <li><a href="offerings.html#startup" class="fundraising">Lorem ipsum</a></li>
+                            <li><a href="offerings.html#esop" class="esop">Lorem ipsum</a></li>
+                            <li><a href="offerings.html#compliance" class="contract">Lorem ipsum</a></li>
+                            <li><a href="offerings.html#fundraising" class="other">Lorem ipsum</a></li>
+                            <li><a href="offerings.html#incubator" class="other">Lorem ipsum</a></li>
                         </ul>
                 </div>
                 <div class="col-footer col2 clearfix">
                     <p>COMPANY</p>
                     <ul>
+                        <li><a href="about-us.html" class="about">Products</a></li>
+                        <li><a href="terms-and-conditions.html" class="terms">Gallery</a></li>
                         <li><a href="about-us.html" class="about">About us</a></li>
                         <!-- <li><a href="career.html" class="career">Career</a></li> -->
                         <li><a href="contact-us.html" class="contact">Contact us</a></li>
                         <!-- <li><a href="#" class="faq">FAQ</a></li> -->
-                        <li><a href="terms-and-conditions.html" class="terms">Terms &amp; Conditions</a></li>
+
                         <li><a href="privacy-policy.html" class="policy">Privacy Policy</a></li>
-                        <li><a href="annualFiling.html" class="policy">Annual Return 2017-18</a></li>
+                        <!-- <li><a href="annualFiling.html" class="policy">Annual Return 2017-18</a></li> -->
                     </ul>
                 </div>
                 <div class="col-footer col3">
                     <p>Address</p>
-                    <p class="address">Work Square, Marathon Chambers, A Wing, Marathon<br> Futurex Compound, N. M. Joshi Marg, Lower Parel (East),<br> Mumbai - 400013 </p>
+                    <p class="address">Gala No 1, Ramesh Compound, Gaon devi road,<br> Bhandup west, Mumbai - 400013 </p>
                     <div class="phone clearfix">
-                        <div class="ph"><img src="/images/Home_Page_Icons/Call.svg" alt=""></div>
-                        <a href="tel:33835994"><p>+91 (22) 33835994</p></a>
+                        <div class="ph"><img src="images/phone-icon.png" alt=""></div>
+                        <a href="tel:33835994"><p>7506357751</p></a>
                     </div>
                     <div class="email clearfix">
-                        <div class="emailimg"><img src="/images/Home_Page_Icons/Email.svg" alt=""></div>
-                        <a href="mailto:support@lexstart.in"><p>support@lexstart.in</p></a>
+                        <div class="emailimg"><img src="images/email-icon.png" alt=""></div>
+                        <a href="mailto:innomindcreation@gmail.com"><p>innomindcreation@gmail.com</p></a>
                     </div>
                 </div>
                 </div>
 
                 <div class="col-footer2">
                 <div class="col-footer col4">
-                <img class="lexlogo" src="/images/Home_Page_Icons/Lex_head_logo.svg" alt="">
+                <img class="lexlogo" src="images/site-logo.png" alt="">
                 <div class="social-net-logo">
-                        <a class="social" href="https://www.facebook.com/lexstartindia"><img src="/images/Home_Page_Icons/facebook-logo.svg" alt="f"></a>
-                        <a class="social" href="https://www.linkedin.com/company/lexstart"><img src="/images/Home_Page_Icons/linkedin.svg" alt="in"></a>
-                        <a class="social" href="https://www.instagram.com/lexstart_india/"><img src="/images/Home_Page_Icons/instagram-logo.svg" alt="insta"></a>
-                        <a class="social last" href="https://twitter.com/lexstart_india"><img src="/images/Home_Page_Icons/twitter.svg" alt="twitter"></a>
+                        <a class="social" href="https://www.facebook.com"><img src="images/facebook-logo.svg" alt="f"></a>
+                        <a class="social" href="https://www.linkedin.com"><img src="images/linkedin.svg" alt="in"></a>
+                        <a class="social" href="https://www.instagram.com"><img src="images/instagram-logo.svg" alt="insta"></a>
+                        <!-- <a class="social last" href="https://twitter.com/lexstart_india"><img src="/images/Home_Page_Icons/twitter.svg" alt="twitter"></a> -->
                 </div>
                 </div>
                 </div>
             </div>
           <div class="row-footer2">
-            <p class="copyright">LexStart Consultancy Private Limited  |  CIN: U74999MH2015PTC265981</p>
+            <p class="copyright">&copy; Innomind Creations 2019</p>
           </div>
         </div>
       </div>
