--- a/contact-us.html
+++ b/contact-us.html
@@ -1,1 +1,43 @@
-<h1>Hello</h1>
+</<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,800,900" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/aboutus.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
+    <title>InnomindCreations</title>
+  </head>
+  <body>
+    <section class="first">
+      <h2>Contact Us</h2>
+      <p>Innomind Creations is a apparel production house, based in Mumbai. We are last mile solution for Corporate gifting apparels, Formal Shirts, Boxers and pyjama sets.</p>
+    </section>
+    <section class="second">
+      <div class="phone">
+        <img src="images/phone-icon.png" alt="">
+        <p>7506357751</p>
+      </div>
+      <div class="address">
+        <img src="images/email-icon.png" alt="">
+        <p>Gala No 1, Ramesh Compound, Gaon devi road,<br> Bhandup west, Mumbai - 400013</p>
+      </div>
+      <div class="mail">
+        <img src="images/email-icon.png" alt="">
+        <p>innomindcreation@gmail.com</p>
+      </div>
+    </section>
+    <section class="footer">
+      <a href="#header"></a>
+      <p>&copy; Innomind Creations 2019</p>
+    </section>
+    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></Script>
+  </body>
+</html>
