--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="About-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Knowledge</a>
