animation added, contact us pg changed

--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,800,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/aboutus.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/contactus.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
     <title>InnomindCreations</title>
   </head>
@@ -45,21 +45,50 @@
     </header>
     <!-- /#header -->
     <section class="first">
-      <h2>Contact Us</h2>
-      <p>Innomind Creations is a apparel production house, based in Mumbai. We are last mile solution for Corporate gifting apparels, Formal Shirts, Boxers and pyjama sets.</p>
+      <div class="content">
+        <h2>Get Connected</h2>
+        <p>Innomind Creations is a apparel production house, based in Mumbai. We are last mile solution for Corporate gifting apparels, Formal Shirts, Boxers and pyjama sets.</p>
+      </div>
     </section>
-    <section class="second">
-      <div class="phone">
-        <img src="images/phone-icon.png" alt="">
-        <p>7506357751</p>
+    <section class="second clearfix">
+      <div class="left">
+        <div class="col">
+          <h2>services</h2>
+          <p><a href="#">Bulk Orders</a></p>
+          <p><a href="#">Walk and shop</a></p>
+          <p><a href="#">Customized orders</a></p>
+          <p><a href="#">Custom tailoring</a></p>
+        </div>
       </div>
-      <div class="address">
-        <img src="images/email-icon.png" alt="">
-        <p>Gala No 1, Ramesh Compound, Gaon devi road,<br> Bhandup west, Mumbai - 400013</p>
+      <div class="middle">
+        <h2>Contact Us</h2>
+        <div class="col clearfix">
+          <div class="icon">
+            <img src="images/call.svg" alt="">
+          </div>
+            <p>7506357751</p>
+        </div>
+        <div class="col clearfix">
+          <div class="icon">
+            <img src="images/email.svg" alt="">
+          </div>
+            <p>Gala No 1, Ramesh Compound, Gaon devi road, Bhandup west, Mumbai - 400013</p>
+        </div>
+        <div class="col clearfix">
+          <div class="icon">
+            <img src="images/address.svg" alt="">
+          </div>
+            <p>innomindcreation@gmail.com</p>
+        </div>
       </div>
-      <div class="mail">
-        <img src="images/email-icon.png" alt="">
-        <p>innomindcreation@gmail.com</p>
+      <div class="right">
+          <img class="lexlogo" src="images/innomind-peocock.jpg" alt="">
+          <div class="social-net-logo">
+                  <a class="social" href="https://www.facebook.com"><img src="images/facebook.svg" alt="f"></a>
+                  <a class="social" href="https://www.linkedin.com"><img src="images/linkedin.svg" alt="in"></a>
+                  <a class="social" href="https://www.instagram.com"><img src="images/instagram.svg" alt="insta"></a>
+                  <!-- <a class="social last" href="https://twitter.com"><img src="images/twitter.svg" alt="twitter"></a> -->
+          </div>
       </div>
     </section>
     <section class="footer">
