--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <a class="nav-link" href="#">Knowledge</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Us</a>
+                  <a class="nav-link" href="contact-us.html">Contact Us</a>
                 </li>
               </ul>
             </form>
@@ -148,7 +148,7 @@
        <section class="three">
          <div class="heading">
            <!-- <button onclick="typeWriter()">Click me</button> -->
-          <h2>This is why <span id="type" onload="typeWriter()"></span> is preferred</h2>
+          <h2 class="js--wp2">This is why Innomind Creations is preferred</h2>
          </div>
          <div class="content">
            <div class="row1 clearfix">
@@ -163,15 +163,15 @@
        </section>
        <section class="four">
           <div class="content clearfix">
-            <div class="col">
+            <div class="col js--wp4">
               <h2>Quality Control</h2>
               <p>Best quality Stitching. measurements up to marks</p>
             </div>
-            <div class="col">
+            <div class="col js--wp4">
               <h2>Cost Structure</h2>
               <p>Worth every penny.<br> Cost Justified Honestly.</p>
             </div>
-            <div class="col">
+            <div class="col js--wp4">
               <h2>Delivery Timeline</h2>
               <p>On time Delivery.<br> Everytime.</p>
             </div>
@@ -183,6 +183,7 @@
        </section>
 		</div>
     <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <script src="js/imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
     <script type="text/javascript" src="js/animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></Script>
