--- a/About-us.html
+++ b/About-us.html
@@ -24,7 +24,7 @@
           <form class="form-inline my-2 my-lg-0">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="About-us.html">About Us</a>
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="#">Knowledge</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </form>
@@ -44,17 +44,17 @@
       </nav>
     </header>
     <!-- /#header -->
-    
+
     <section class="first">
       <div class="content">
         <h2>About Us</h2>
       </div>
     </section>
     <section class="second clearfix">
-       <div class="images">
+       <div class="images js--wp2">
          <img src="images/history.png" alt="">
        </div>
-       <div class="history">
+       <div class="history js--wp3">
          <h3>History of Company</h3>
          <p>Inaugurated on August 2014, with a aim of venturing into entrepreneurial world and creating everything from the scratch, Innomind creations was born. Main aim of starting with  Formal Shirts was it never ending demand in corporate Culture. Over the time company added to its work areas as well as exanded the product portfolio. Innomind creations was born with a aim to make mens fashion a daily wear accessory rather than luxury.</p>
        </div>
@@ -89,28 +89,28 @@ Being a staunch supporter of women empowerment through employment, he provides m
     </section>
     <section class="career clearfix">
       <h3>Career</h3>
-      <div class="card">
+      <div class="card js--wp4">
         <img src="images/tailor.svg" alt="Avatar">
         <div class="container">
           <h4><b>DESIGNING AND MERCHENDICING</b></h4>
           <p>Get Connected</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card js--wp4">
         <img src="images/tailor.svg" alt="Avatar">
         <div class="container">
           <h4><b>ECOMMERCE HANDLER</b></h4>
           <p>Get Connected</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card js--wp4">
         <img src="images/tailor.svg" alt="Avatar">
         <div class="container">
           <h4><b>MARKETING WIZARD</b></h4>
           <p>Get Connected</p>
         </div>
       </div>
-      <div class="card last">
+      <div class="card last js--wp4">
         <img src="images/tailor.svg" alt="Avatar">
         <div class="container">
           <h4><b>BUSINESS & PRODUCT DEVELOPMENT</b></h4>
@@ -118,11 +118,20 @@ Being a staunch supporter of women empowerment through employment, he provides m
         </div>
       </div>
     </section>
+    <section class="distributer">
+      <div class="content">
+        <h2>Become a Distrobuter</h2>
+        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio</p>
+        <a href="#"> <button class="click-btn">Wholesaler</button></a>
+        <a href="#"> <button class="click-btn">Retailer</button></a>
+      </div>
+    </section>
     <section class="footer">
       <a href="#header"></a>
       <p>&copy; Innomind Creations 2019</p>
     </section>
     <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <script src="js/imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
     <script type="text/javascript" src="js/animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></Script>
