--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
           <form class="form-inline my-2 my-lg-0">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="About-us.html">About Us</a>
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="#">Knowledge</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </form>
@@ -50,22 +50,22 @@
         <!-- <source src="mov_bbb.ogg" type="video/ogg"> -->
         Your browser does not support HTML5 video.
       </video>
-      <div class="content">
-        <h1><span>O-Note.</span><br> Create Your Online Documentation Easily</h1>
+      <div class="content js--wp2">
+        <h1><span>O-Note.</span><br> Create Your Online Designs Easily</h1>
       </div>
     </section>
     <section class="second clearfix">
-      <div class="col">
+      <div class="col clearfix js--wp3">
         <div class="img">
             <img src="images/niddle.svg" alt="">
         </div>
         <div class="info">
-          <h2>Lorem ipsum</h2>
+          <h2>Wide Range of Collection</h2>
           <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis.</p>
         </div>
         <a href="#">Learn More <img src="images/more.svg" alt=""> </a>
       </div>
-      <div class="col clearfix">
+      <div class="col clearfix js--wp3">
         <div class="img">
           <img src="images/buttons.svg" alt="">
         </div>
@@ -75,33 +75,33 @@
         </div>
         <a href="#">Learn More <img src="images/more.svg" alt=""> </a>
       </div>
-      <div class="col">
+      <div class="col clearfix js--wp3">
         <div class="img">
           <img src="images/sew.svg" alt="">
         </div>
         <div class="info">
-          <h2>50% Discount</h2>
+          <h2>Expert Quality stitching</h2>
           <p>At vero eos et accusamus et iusto odio dignist simos ducimus qui blanditiis praesentium.</p>
         </div>
         <a href="#">Learn More <img src="images/more.svg" alt=""> </a>
       </div>
     </section>
     <section class="three clearfix">
-      <div class="col one">
+      <div class="col one js--wp4">
         <div class="content">
-          <h2>Create</h2>
+          <h2>Walk and Shop</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
         </div>
       </div>
-      <div class="col two">
+      <div class="col two js--wp4">
         <div class="content">
-          <h2>Create</h2>
+          <h2>Customized Orders</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
         </div>
       </div>
-      <div class="col third">
+      <div class="col third js--wp4">
         <div class="content">
-          <h2>Create</h2>
+          <h2>Custom tailoring</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
         </div>
       </div>
@@ -117,15 +117,38 @@
     </section>
     <section class="five clearfix">
       <div class="left">
-        <img src="images/five-left.png" alt="">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="1500">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/outlet-based.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/formal1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/printed1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/printed2.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
       <div class="right">
-        <h2>Start creating your documents</h2>
+        <h2>Start creating your Designs</h2>
         <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio.</p>
-        <a href="#"> <button class="click-btn">Click Here</button></a>
+        <a href="#"> <button class="click-btn">Contact us</button></a>
       </div>
     </section>
-    <section class="six clearfix">
+    <!-- <section class="six clearfix">
       <div class="col">
         <img src="images/six-one.jpg" alt="">
       </div>
@@ -144,12 +167,12 @@
           <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur</p>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="contact">
       <div class="content">
         <h2>Over 3 Million Active Users</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <a href="#"> <button class="click-btn">Click Here</button></a>
+        <a href="#"> <button class="click-btn">Contact Us</button></a>
       </div>
     </section>
     <section class="footer">
@@ -157,7 +180,8 @@
       <p>&copy; Innomind Creations 2019</p>
     </section>
     <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-    <!-- <script type="text/javascript" src="js/nav.js"></script> -->
+    <script src="js/imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="js/animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></Script>
   </body>
